Added link to Zuzanna's Data View relationship diagram

--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -23,6 +23,8 @@ Another important point related to Data Views to always be aware of which Data V
 
 Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers and Email Channel. I plan to cover the rest of them in the future.
 
+Be sure to check the awesome [Data Views relationship diagram](https://svgshare.com/i/TeR.svg) created by [Zuzanna Jarczyńska](https://sfmarketing.cloud). It will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
+
 :::
 
 ---
