Content Updates to Features On Demand article

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -54,10 +54,11 @@ Additional Dedicated IP | You can purchase additional dedicated IPs to manage mo
 Additional Private Domain | You can purchase additional private domains to differentiate various communication types. This feature does not cover link and image branding. | [Private Domains](https://help.salesforce.com/articleView?id=000318538&type=1&mode=1) | Paid
 SSL | Secures your traffic and gives that sweet `HTTPS`, a must-have nowadays. | [SSL Certificate](https://help.salesforce.com/articleView?id=000339842&type=1&mode=1) | Paid
 Reputation Audit Test | Ad hoc request allows you to receive information about the current state of the blacklists, authentication, DNS and content reviews (spam assessment) for your dedicated IPs. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
-Reputation Audit Account | Allows you to receive a dedicated account to Reputation Audit tool so that you can check the state of your dedicated IPs without creating recurring Reputation Audit Test requests. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
+Reputation Audit Account | \[__Temporarily restricted__\] Allows you to receive a dedicated account to Reputation Audit tool so that you can check the state of your dedicated IPs without creating recurring Reputation Audit Test requests. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
 Bounce Detective | Sends email alerts when recent send has an elevated bounce rate at any domain with 25+ recipients and provides per-domain bounce-focused analysis. | N/A | Free
 Sender Rating | Provides a breakdown of current deliverability-focused sending scores, with trends, in a visually digestible format. | N/A | Free
 Dedicated IP Custom Configuration | By default, if you have multiple dedicated IPs, your communication will use all of them by splitting the volume into 5000 emails batches and rotating the available IPs to push those. You can also assign a specific IP to a particular Delivery Profile. However, with the help of Support, you can create hybrid solutions like pools of few IPs per each delivery profile. It might be crucial for massive senders. | N/A | Free
+MTA Email Throttle | Apart from Email Studio Throttle feature focused on controlling engagement stream there is a deliverability-focused throttle added to a selected dedicated domain(s) on the MTA level. Perfect to limit send speed for reputation building purposes. | N/A | Free
 
 ## Email Studio Features
 
@@ -71,7 +72,7 @@ Custom List Detective | Allows you to block sending and subscribing all contacts
 Custom List Detective Allowlist | On top of Custom List Detective you can also ask Support to add specific usernames or domains to Allowlist. Might be useful, as this setting will overwrite the standard List Detective. | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
 Email Attachments | Allows you to send emails with attachments. | [Email Attachments](https://help.salesforce.com/articleView?id=sf.mc_es_email_attachments.htm&type=5) | Paid
 Preserve Reply Attachments | Forwards attachments added to the reply email via RMM's auto-forwarding. | [Reply Mail Management](https://help.salesforce.com/articleView?id=sf.mc_es_reply_mail_management.htm&type=5) | Free
-Subscriber-Specific From Name & Address | Allows you to personalise the From Name and From Address per each Subscriber. | [Personalised Sender Profile](https://help.salesforce.com/articleView?id=sf.mc_es_sender_profile.htm&type=5) | ?
+Enhanced Sender Profile | Allows you to personalise the From Name and From Address per each Subscriber using AMPScript. | [Personalised Sender Profile](https://help.salesforce.com/articleView?id=sf.mc_es_sender_profile.htm&type=5) | ?
 Email Archiving | Allows you to save a copy of your Emails of particular Send Classification to Enhanced FTP | [Email Archiving](https://help.salesforce.com/articleView?id=sf.mc_es_email_archiving.htm&type=5) | Paid
 Email Send Throttle | Allows you to control both the maximum amount of messages pushed in a given timeframe, as well as the hours when the sends occur. | [Send Throttle](https://help.salesforce.com/articleView?id=sf.mc_es_send_throttle.htm&type=5) | Free
 CC and BCC for Email | Allows you to use CC and BCC in your Emails. You can even use personalisation strings for it (f.e. `%%AccountOwnerEmail%%`). Watch out for unsubscription rules! | [Select Audience](https://help.salesforce.com/articleView?id=sf.mc_es_select_audience.htm&type=5) | Free
