--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -631,3 +631,23 @@ When working with `_Journey` Data View:
 
 ---
 
+## Custom Data Views
+
+On top of all built-in Data Views mentioned above there is also a paid option for a custom Data Views. As for the possibilities, the sky is the limit. Example? [Lukas Lunow](https://linkedin.com/in/lunow) [highlighted](https://salesforce.stackexchange.com/a/293395/91679) a fascinating one that solves a problem of knowing what is the current status of a Contact in a given Journey:
+
+Name | Description | Data Type | Nullable
+-- | -- | -- | --
+JourneyVersionNumber | The version number of the version of the Journey | Number
+JourneyName | The name of the Journey | Text
+JourneyStatus | Tells you whether the Journey is still Active | Text
+ContactKey | The subscriber key for the affected subscriber | Text
+ContactID | Global Contact ID (not Contact Key) | Number
+ContactStatus | Tell you whether the contact is still in the Journey (`Active` or `Exited`) | Text
+EntryDate | Date of Journey Entry | Date |
+ExitDate | Date of Journey Exit - including Goal / Exit Criteria. Null if still in Journey. | Date | x
+
+Yes, you can create a workaround to know whether the Contact is in a given Journey using standard Data Extension and Update Contact Journey Activities on the beginning and end of every Journey. Not only it requires you to remember always to add those additional steps; it also blocks you from using Goals and Exit Criteria.
+
+Custom Data View allow you to eat a cookie and have a cookie.
+
+You can certainly come up with other use cases that could be solved if only you had one additional data point. Now you can.
