Small content fix

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -128,7 +128,7 @@ SOAP Disable Datetime Normalisation | By default dates coming to Marketing Cloud
 
 Some features are currently added Out of the Box for new Salesforce Marketing Cloud deployments but were not in the past. If you are rocking old instance, you might also be interested in features like:
 
-- Script Activity for Journey Builder: use SSJS in your Automations
+- Script Activity for Automation Studio: use SSJS in your Automations
 - Shared Folders for Content Builder: make your Content available across multiple Business Units
 - Profile Attributes for Email Studio: Subscriber attributes stored at All Subscribers level and available for personalisation
 - Brand Builder: allows you to style Salesforce Marketing Cloud a bit by using accent colours and adding your company logo.
