Small content updates

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -95,6 +95,8 @@ Discover Reporting Tool | Allows you to create new complex reports using templat
 Custom Reports | Allows you to request creating a new Report aligned with your needs. | N/A | Paid
 Account Utilisation Report | Ad hoc request to get the current utilisation status of Super Messages. | N/A | Free
 
+There are some additional analytics and tracking related features within [Automation Studio Features](#automation-studio-features) - Data Extract Types. For example Include User Agent Information, Unique Clicks and Opens, Campaing ID and more.
+
 ## Journey Builder Features
 
 Feature Name | Description | Documentation | Type
