--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -642,7 +642,7 @@ JourneyName | The name of the Journey | Text
 JourneyStatus | Tells you whether the Journey is still Active | Text
 ContactKey | The subscriber key for the affected subscriber | Text
 ContactID | Global Contact ID (not Contact Key) | Number
-ContactStatus | Tell you whether the contact is still in the Journey (`Active` or `Exited`) | Text
+ContactStatus | Tell you whether the contact is still in the Journey (`Active`, `Exited` or even more detailed like `DidNotMeetEntryCriteria`, `ContactExitedByAPI`) | Text
 EntryDate | Date of Journey Entry | Date |
 ExitDate | Date of Journey Exit - including Goal / Exit Criteria. Null if still in Journey. | Date | x
 
