--- a/ideas/ideas.mdx
+++ b/ideas/ideas.mdx
@@ -64,7 +64,7 @@ Its implementation is, however, leading to a problem with tracking. My favourite
 
 Right now, there are only two ways to add the UTM's:
 1. Add them to the Catalog directly - this adds them for all scenarios connected to Einstein or Behavioral Triggers. Not useful, as in most cases, we want to differentiate various personalisation placements by using distinct UTM tracking.
-2. Create a Custom Behavioral Trigger Content Block - now we will be able to add them to the product's HTML template. Okay, but not easy.
+2. Create a Custom Behavioral Trigger Content Block - now we will be able to leverage direct links from `IGO_PRODUCTATTRIBS` add tracking to them in the product's HTML template. Okay, but not easy and make you loose click data for Einstein Recommendations.
 
 Salesforce can fix it. Below are two possible solutions:
 
